Update API config for production deployment and web metadata

--- a/lib/config/api_config.json
+++ b/lib/config/api_config.json
@@ -1,4 +1,4 @@
 {
-  "apiUrl": "http://10.0.2.2:30001/api",
-  "environment": "android_emulator"
+  "apiUrl": "https://bitzed.xyz/api",
+  "environment": "production"
 }
