--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "bitzed_flutter_app",
-    "short_name": "bitzed_flutter_app",
+    "name": "BitZed - Bitcoin Lightning Network",
+    "short_name": "BitZed",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "description": "BitZed - Bitcoin Lightning Network App for Zambia",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
